src/test/ui/access-mode-in-closures.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/access-mode-in-closures.rs:19:15
   |
LL |         match *s { sty(v) => v } //~ ERROR cannot move out
   |               ^^       - data moved here
   |               |
   |               cannot move out of borrowed content
   |               help: consider removing the `*`: `s`
   |
note: move occurs because `v` has type `std::vec::Vec<isize>`, which does not implement the `Copy` trait
  --> $DIR/access-mode-in-closures.rs:19:24
   |
LL |         match *s { sty(v) => v } //~ ERROR cannot move out
   |                        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
